move TicTacToe class into separated file

--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     </div>
   </div>
 
-  <script src="src/index.js"></script>
+  <script src="src/scripts/tic-tac-toe.js"></script>
+  <script src="src/scripts/index.js"></script>
 </body>
 
 </html>
